--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#">Home</a></li>
-						<li><a href="#feature">Features</a></li>
-						<li><a href="#work">Our Work</a></li>
-						<li><a href="#service">Services</a></li>
+						<li><a href="#feature">About</a></li>
+						<li><a href="#work">Work with OpenSource Data</a></li>
+						<li><a href="#service">Join today</a></li>
 						<li><a href="#gallery">Gallery</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -74,24 +74,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- banner section -->
 <!-- features section -->
 <section class="our-features" id="feature">
-	<h3 class="text-center w3layouts w3 w3l w3ls">Build your own satellite</h3>
-	<p class="text-center w3layouts w3 w3l w3ls">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+	<h3 class="text-center w3layouts w3 w3l w3ls">It's time to build your own satellite!</h3>
+	<p class="text-center w3layouts w3 w3l w3ls">SchoolSat provides an opportunity for students around the world to engage with exciting world of space exploration! </p>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l">
 				<img class="img-circle img-responsive" src="images/feature1.jpg" alt="Generic placeholder image">
-				<h4>Your spacecraft in a cube</h4>
-				<p>Building a satellite has never been so simple.</p>
+				<h4>Send you own satelite to space</h4>
+				<p>SchoolSat aims to provide primary and secondary school students with an opportunity to explore the space. Enter the application process and build your own satellite just in couple months!</p>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l">
 				<img class="img-circle img-responsive" src="images/feature2.jpg" alt="Generic placeholder image">
-				<h4>Choose what to send to space</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+				<h4>Tweak your SchoolSat</h4>
+				<p>SchoolSat is customisable to suit needs of your own research project. Choose 8 out of 30 available senors to measure physical properties you need.</p>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l f3">
 				<img class="img-circle img-responsive" src="images/feature3.jpg" alt="Generic placeholder image">
-				<h4>Be a rocket scientist!</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+				<h4>All data is OpenSource!</h4>
+				<p>All data collected by CubeSats is OpenSource, meaning you can use it for your own research without moving out from your bed!</p>
 			</div><!-- /.col-lg-4 -->
 		</div><!-- /.row -->
 	</div>
@@ -99,12 +99,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- /features section -->
 <!-- work section -->
 <section class="our-work" id="work">
-	<h3 class="text-center agileits agileinfo wthree w3-agileits">Our Works</h3>
-	<p class="text-center agileits agileinfo wthree w3-agileits">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	<h3 class="text-center agileits agileinfo wthree w3-agileits">Work with OpenSource Data</h3>
+	<p class="text-center agileits agileinfo wthree w3-agileits">Use data collected by already lounched projects for free. Make your own research!</p>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<h4>Lorem Ipsum</h4>
+				<h4>Potential research ideas</h4>
 				<div class="work-info">
 					<div class="row">
 						<div class="work-agileits">
@@ -113,8 +113,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="col-lg-7 col-md-3 col-sm-6 work-w3h">
 								<div class="work-w3agile">
-									<h5>Lorem Ipsum Dolor</h5>
-									<p class="work-agile">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+									<h5>Understand Cloud movement using image analysis</h5>
+									<p class="work-agile">Feeling like watching Weather forecast on TV is too mainstream? Use data collected by the SchoolSat cameras to analyse cloud movements and try to predict wether changes if you are keen.</p>
 								</div>
 							</div>
 						</div>
@@ -125,8 +125,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="col-lg-7 col-md-3 col-sm-6 work-w3h">
 								<div class="work-w3agile">
-									<h5>Lorem Ipsum Dolor</h5>
-									<p class="work-agile">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+									<h5>How much power does USA consume by night?</h5>
+									<p class="work-agile">Have you ever seen those night satelite pictures with beautiful bright clusters made by lighten up cities? You could use our open source date to estimate how much energy is consumed and how does it vary across a year.</p>
 								</div>
 							</div>
 						</div>
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-lg-6">
-				<h4>Lorem Ipsum</h4>
+				<h4>Meet our fellow researchers</h4>
 				<div class="row">
 					<div class="col-xs-6 work-w3lsagile">
 						<div class="work-w3">
@@ -149,8 +149,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</ul>
 								</div>
 							</div>
-							<h6>Lady Gaga</h6>
-							<p class="work-w3ls">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+							<h6>Janek</h6>
+							<p class="work-w3ls">"I really loved the freedom SchoolSat offers. I was able to make my own research and had all the date I needed!"</p>
 						</div>
 					</div>
 					<div class="col-xs-6 work-w3lsagile">
@@ -166,8 +166,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</ul>
 								</div>
 							</div>
-							<h6>Marilyn Monroe</h6>
-							<p class="work-w3ls">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+							<h6>Alvaro</h6>
+							<p class="work-w3ls">"It was an incredible experience. It was the first time I could access data with such depth."</p>
 						</div>
 					</div>
 				</div>
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- /work section -->
 <!-- services section -->
 <section class="our-services" id="service">
-	<h3 class="text-center agileits-w3layouts agile w3-agile">Our Services</h3>
+	<h3 class="text-center agileits-w3layouts agile w3-agile">Join Today</h3>
 	<p class="text-center agileits-w3layouts agile w3-agile">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 	<div class="container">
 		<div class="row">
