--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/work.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- /css files -->
+
+<!-- superslides css files -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/jquery.animate-enhanced.min.js"></script>
+<script src="js/application.js"></script>
+<script src="js/jquery.hammer.min.js"></script>
+<script src="js/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
+<!-- superslides /css files -->
+
+<!-- superslides js files -->
+
+<link rel="stylesheet" href="css/superslides.css">
+<link rel="stylesheet" href="css/sliderlayout.css">
+
+<!-- superslides /js files -->
+
 <!-- js files -->
 
 <!-- /js files -->
@@ -60,16 +76,54 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- /navigation -->
 <!-- banner section -->
-<div id="Fader" class="fader">
-	<img class="slide img-responsive" src="images/banner1.jpg" alt="w3layouts">
-	<img class="slide img-responsive" src="images/banner2.jpg" alt="w3layouts">
-	<img class="slide img-responsive" src="images/banner3.jpg" alt="w3layouts">
-	<img class="slide img-responsive" src="images/banner4.jpg" alt="w3layouts">
-    <div class="fader_controls">
-		<div class="page prev" data-target="prev">&lsaquo;</div>
-		<div class="page next" data-target="next">&rsaquo;</div>
-		<ul class="pager_list"></ul>
-    </div>
+<div id="slides" class="slide">
+  <ul class="slides-container">
+    <li>
+      <img src="images/banner1.jpg" alt="">
+      <div class="container">
+        <h1 class="slide">Superslides is a fullscreen slider for jQuery.</h1>
+        <p>
+        </p>
+      </div>
+    </li>
+    <li>
+      <img src="images/banner2.jpg" alt="">
+      <div class="container">
+        <h1>It's responsive.</h1>
+        <div class="contrast">
+          <p>
+            Images are smartly centered in the viewport. Use your own media queries to control the layout of your content.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="images/banner3.jpg" alt="">
+      <div class="container">
+        <h1>It's hardware accelerated.</h1>
+        <div class="contrast">
+          <p>For browsers that support CSS hardware acceleration, tasks, such as animation, are processed by the GPU giving massive performance gains.</p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="images/banner4.jpg" alt="">
+      <div class="container">
+        <h1>It's got a pretty sweet API.</h1>
+        <div class="contrast">
+          <p>The control API lets you start, stop, animate, and destroy instances of the slider. You can get the current, next, and previous slides programmatically. In fact, the slider uses the same API internally.</p>
+        </div>
+      </div>
+    </li>
+  </ul>
+  <nav class="slides-navigation">
+    <a href="#" class="next">
+      <i class="icon-chevron-right"></i>
+    </a>
+    <a href="#" class="prev">
+      <i class="icon-chevron-left"></i>
+    </a>
+  </nav>
 </div>
 <!-- banner section -->
 <!-- features section -->
@@ -408,7 +462,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <a href="#0" class="cd-top">Top</a>
 <!-- /back to top -->
 <!-- js files -->
-<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
 <!-- js for gallery section -->
