--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/work.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- /css files -->
+<!-- superslides css files -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/jquery.animate-enhanced.min.js"></script>
+<script src="js/application.js"></script>
+<script src="js/jquery.hammer.min.js"></script>
+<script src="js/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
+<!-- superslides /css files -->
+<!-- superslides js files -->
+<link rel="stylesheet" href="css/superslides.css">
+<link rel="stylesheet" href="css/sliderlayout.css">
+<!-- superslides /js files -->
 <!-- js files -->
-
 <!-- /js files -->
 </head>
 <body>
@@ -67,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </nav>
 	</div>
 </div>
-<a href="https://github.com/nicinabox/superslides"><img style="position: relative fixed; z-index: 21; top: 0; right: 0; border: 0;" src="images/download-me.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/nicinabox/superslides"><img style="position: fixed; z-index: 21; top: 0; right: 0; border: 0;" src="images/download-me.png" alt="Fork me on GitHub"></a>
 
 <!-- /navigation -->
 <!-- banner section -->
@@ -457,7 +467,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <a href="#0" class="cd-top">Top</a>
 <!-- /back to top -->
 <!-- js files -->
-<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
 <!-- js for gallery section -->
