Sticky download solved

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
         </nav>
-        <a href="https://github.com/nicinabox/superslides"><img style="position: absolute; z-index: 21; top: 0; right: 0; border: 0;" src="images/download-me.png" alt="Fork me on GitHub"></a>
-
 	</div>
 </div>
 <!-- /navigation -->
+
+<a href="https://github.com/nicinabox/superslides"><img style="position: fixed; z-index: 21; top: 0; right: 0; border: 0;" src="images/download-me.png" alt="Fork me on GitHub"></a>
+
+
 <!-- banner section -->
 <div id="slides" class="slide">
   <ul class="slides-container">
