--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#work">Open Source</a></li>
 						<li><a href="#service">Join today</a></li>
 						<li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#repository">The Repository</a></li>
 						<li><a href="#contact">Contact</a></li>
             <li><a></a></li>
             <li><a></a></li>
@@ -77,11 +78,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </nav>
 	</div>
 </div>
-<!-- /navigation -->
-
 <a href="https://github.com/nicinabox/superslides"><img style="position: fixed; z-index: 21; top: 0; right: 0; border: 0;" src="images/download-me.png" alt="Fork me on GitHub"></a>
 
-
+<!-- /navigation -->
 <!-- banner section -->
 <div id="slides" class="slide">
   <ul class="slides-container">
@@ -96,10 +95,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <li>
       <img src="images/banner2.jpg" alt="">
       <div class="container">
-        <h1>It's responsive.</h1>
+        <h1>Build your own satelite</h1>
         <div class="contrast">
           <p>
-            Images are smartly centered in the viewport. Use your own media queries to control the layout of your content.
+            Download all necessary files to build your own Cube satelite. Click button in right top corner of your screan. 
           </p>
         </div>
       </div>
@@ -107,18 +106,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <li>
       <img src="images/banner3.jpg" alt="">
       <div class="container">
-        <h1>It's hardware accelerated.</h1>
+        <h1>OpenSource Data</h1>
         <div class="contrast">
-          <p>For browsers that support CSS hardware acceleration, tasks, such as animation, are processed by the GPU giving massive performance gains.</p>
+          <p>You can also do space based research without sending a satellite. Check out our respository for the available data.</p>
         </div>
       </div>
     </li>
     <li>
       <img src="images/banner4.jpg" alt="">
       <div class="container">
-        <h1>It's got a pretty sweet API.</h1>
+        <h1>Start Space Exploration now!</h1>
         <div class="contrast">
-          <p>The control API lets you start, stop, animate, and destroy instances of the slider. You can get the current, next, and previous slides programmatically. In fact, the slider uses the same API internally.</p>
+          <p>Why wait any longer? Scroll down the page and learn more how to begin your own space exploration today.</p>
         </div>
       </div>
     </li>
@@ -278,7 +277,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- gallery section -->
 <section class="our-gallery" id="gallery">
 	<h3 class="text-center">Our Gallery</h3>
-	<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	<p class="text-center">See how the project developed over the time.</p>
 	<div class="container">
 		<div>
 			<a href="images/gallery1.jpg" class="lightninBox" data-lb-group="1"><img src="images/gallery1.jpg" alt="" /></a>
@@ -297,58 +296,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- /gallery section -->
-<!-- testimonial section -->
-<section class="our-testimonials" id="testimonial">
-	<h3 class="text-center">What Our Customers Say</h3>
-	<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-	<div class="container">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<img class="first-slide img-circle img-responsive" src="images/test1.jpg" alt="First slide">
-					<h4>Johnny Cage</h4>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-				<div class="item">
-					<img class="second-slide img-circle img-responsive" src="images/test2.jpg" alt="Second slide">
-					<h4>Elizabeth</h4>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-				<div class="item">
-					<img class="third-slide img-circle img-responsive" src="images/test3.jpg" alt="Third slide">
-					<h4>Magdalene</h4>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				</div>
-			</div>
-			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div><!-- /.carousel -->
-	</div>
+<!-- repository section -->
+<section class="our-services" id="service">
+	<h3 class="text-center agileits-w3layouts agile w3-agile">The repository</h3>
+    <p class="text-center agileits-w3layouts agile w3-agile">We don't have any of our data available yet... </p>
+    	<div class="container">
+				<div class="serv-w3l">
+                    <img class="center" src="images/no_data.png" alt="work" class="img-responsive">
+                </div>
+        </div>
+    <p class="text-center agileits-w3layouts agile w3-agile"> ...But check out another OpenSource repository <a href="http://data.satapps.org">here</a></p>
+	
 </section>
-<!-- /testimonial section -->
-<!-- map section -->
-<section class="map">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12 slideanim">
-				<iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d380510.6741687111!2d-88.01234121699822!3d41.83390417061058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1455598377120" style="border:0" allowfullscreen></iframe>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- /map section -->
+<!-- /repository section -->
 <!-- contact section -->
 <section class="our-contacts" id="contact">
 	<h3 class="text-center">Our Contacts</h3>
